[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Abhijit Bose @boseji <salearj@hotmail.com>"]
categories = ["embedded", "no-std"]
description = "A template for building applications for ARM Cortex-M microcontrollers"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "rust-bluepill-quickstart"
repository = "https://github.com/japaric/cortex-m-quickstart"
version = "0.2.1"

[profile.dev]
codegen-units = 1
incremental = false
# These two are needed to not overrun the flash
opt-level = 0
lto = false

[profile.release]
lto = true
debug = true

[dependencies]
cortex-m = "0.3.0"
cortex-m-rtfm = "0.3.1"
# f3 = "0.5.1"
nb = "0.1.1"

[dependencies.embedded-hal]
version = "0.1.1"
features = ["unproven"]

# stm32f30x-hal = "0.1.2"
# stm32f30x-hal = {path = "../../stm32f30x-hal"}

[dependencies.cortex-m-rt]
version = "0.3.12"
features = ["abort-on-panic"]

[dependencies.cortex-m-semihosting]
version = "0.2.0"

#f [dependencies.stm32f30x]
# version = "0.6.0"
# features = ["rt"]

[dependencies.stm32f103xx-hal]
# git = "https://github.com/japaric/stm32f103xx-hal.git"
path = "../../stm32f103xx-hal"
features = ["time_units"]

[dependencies.stm32f103xx]
version = "0.8.0"
features = ["rt"]


[dependencies.embedded-hal-time]
path = "../embedded-hal-time"


[dependencies.arrayvec]
version = "0.4.7"
default_features = false
