[package]
name = "monocle_host"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@gmail.com>"]

[profile.dev]
debug-assertions=false

[dependencies]
serial = "0.4.0"
api = {path = "../api"}
websocket = "0.20.2"

serde = "1.0.34"
serde_derive = "1.0.34"
serde_json = "1.0.13"


simple-server = "0.3.0"
